--- a/index.html
+++ b/index.html
@@ -147,10 +147,34 @@
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="container">
-      <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2019</p>
+      <div class="row">
+        <div class="col-md-4 part">
+          <h3>Szkoła nauki jazdy MAX</h3>
+          <p><b>Z przyjemnością nauczysz się jeździć!</b></p>
+          <ul>
+            <li>505 069 921</li>
+            <li>email.example.com</li>
+            <li>Brzesko, ul. Ogrodowa 5</li>
+            <li>Facebook</li>
+          </ul>
+        </div>
+        <div class="col-md-4 part">
+          <ul class="sections">
+            <li><a href="#">O nas</a></li>
+            <li><a href="#">O kursie</a></li>
+            <li><a href="#">Terminy</a></li>
+            <li><a href="#">Opinie</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4 part">
+          <h4>Napisz do nas e-mail!</h4>
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="email">
+            </div>
+        </div>
+      </div>
     </div>
-    <!-- /.container -->
-  </footer>
+  </footer>  
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
