--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 </head>
 
 <body>
-
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v7.0"></script>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
@@ -69,7 +70,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <div class="rounded-image i-1"></div>
+            <img class="img-fluid rounded-circle" src="img/01.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -95,7 +96,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <div class="p-5">
-            <div class="rounded-image i-2"></div>
+            <img class="img-fluid rounded-circle" src="img/02.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-6">
@@ -116,7 +117,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
-            <div class="rounded-image i-3"></div>
+            <img class="img-fluid rounded-circle" src="img/03.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-6 order-lg-1">
@@ -132,14 +133,31 @@
 
   <section>
     <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-6">
+      <div class="row justify-content-center">
+        <div class="p-3">
+          <h2 class="display-4">Co o nas mówią?</h2>
         </div>
-        <div class="col-lg-6">
-          <div class="p-5">
-            <h2 class="display-4">Co o nas mówią?</h2>
-          </div>
-        </div>
+      </div>
+      <div class="recommendation-container row justify-content-center">
+        <iframe class="recommendation r-1" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D1077675972619604%26id%3D100011316349026&show_text=true&width=auto&appId" width="552" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+      </div>
+      <div class="recommendation-container row justify-content-center">
+        <iframe class="recommendation r-2" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fkinga.jaworska.52%2Fposts%2F2492004664261977&show_text=true&width=auto&appId" width="552" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+      </div>
+      <div class="recommendation-container row justify-content-center">
+        <iframe class="recommendation r-3" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fanita.tekiela.1%2Fposts%2F792401687592379%3A0&show_text=true&width=auto&appId" width="552" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+      </div>
+      <div class="recommendation-container row justify-content-center">
+        <iframe class="recommendation r-4" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fagnieszka.marek.777158%2Fposts%2F155708662379557&show_text=true&width=auto&appId" width="552" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+      </div>
+      <div class="recommendation-container row justify-content-center">
+        <iframe class="recommendation r-5" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmarta.urbanska.52%2Fposts%2F1253016774797642%3A0&show_text=true&width=auto&appId" width="552" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+      </div>
+      <div class="recommendation-container row justify-content-center">
+        <iframe class="recommendation r-6" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Frozalia.klesiewicz%2Fposts%2F2353335184777322&show_text=true&width=auto&appId" width="552" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+      </div>
+      <div class="recommendation-container row justify-content-center">
+        <iframe class="recommendation r-7" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FNaukaJazdyMax%2Fposts%2F2780938755296362&show_text=true&width=auto&appId" width="552" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
       </div>
     </div>
   </section>
