Add favicon and icons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/styles.css" rel="stylesheet">
-
+  <link rel=icon href=img/favicon.png>
 </head>
 
 <body>
@@ -170,9 +170,9 @@
           <h3>Szkoła nauki jazdy MAX</h3>
           <p><b>Z przyjemnością nauczysz się jeździć!</b></p>
           <ul>
-            <li>505 069 921</li>
-            <li>email.example.com</li>
-            <li>Brzesko, ul. Ogrodowa 5</li>
+            <li><img class="icon" src="img/phone.svg" alt=""> 505 069 921</li>
+            <li><img class="icon" src="img/envelope-closed.svg" alt=""> email.example.com</li>
+            <li><img class="icon" src="img/map-marker.svg" alt=""> Brzesko, ul. Ogrodowa 5</li>
             <li>Facebook</li>
           </ul>
         </div>
