Add hover effects

--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
         </div>
         <div class="col-md-4 part">
           <ul class="sections">
-            <li><a class="nav-link" href="#oNas">O nas</a></li>
-            <li><a class="nav-link" href="#oKursie">O kursie</a></li>
-            <li><a class="nav-link" href="#terminy">Terminy</a></li>
-            <li><a class="nav-link" href="#opinie">Opinie</a></li>
+            <li class="nav-item"><a class="nav-link" href="#oNas">O nas</a></li>
+            <li class="nav-item"><a class="nav-link" href="#oKursie">O kursie</a></li>
+            <li class="nav-item"><a class="nav-link" href="#terminy">Terminy</a></li>
+            <li class="nav-item"><a class="nav-link" href="#opinie">Opinie</a></li>
           </ul>
         </div>
         <div class="col-md-4 part">
