Add footer circles

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
   <!-- Footer -->
   <footer class="py-5 bg-black">
-    <div class="container">
+    <div class="footer-content container">
       <div class="row">
         <div class="col-md-4 part">
           <h3>Ośrodek Szkolenia Kierowców MAX</h3>
@@ -201,6 +201,10 @@
         </div>
       </div>
     </div>
+    <div class="bg-circle-1 bg-circle"></div>
+    <div class="bg-circle-2 bg-circle"></div>
+    <div class="bg-circle-3 bg-circle"></div>
+    <div class="bg-circle-4 bg-circle"></div>
   </footer>  
 
   <!-- Bootstrap core JavaScript -->
