Tweak email button

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               <input type="text" class="form-control" id="emailSender" aria-describedby="emailHelp" placeholder="numer telefonu lub email">
               <small id="emailHelp" class="form-text text-muted">Zostaw numer telefonu, albo adres email, na który możemy odpowiedzieć :)</small>
             </div>
-            <button type="submit" class="btn btn-primary">Wyślij</button>
+            <button type="submit" class="btn btn-primary btn-xl rounded-pill">Wyślij</button>
           </form>
         </div>
       </div>
