--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
         <div class="col-lg-6 order-lg-1">
           <div class="p-4">
             <h2 class="display-4">Kim jesteśmy?</h2>
-            <p>Cześć! Właśnie trafiłeś na stronę najfajniejszej szkoły nauki jazdy w Brzesku. Co roku w rankingach zdawalności znajdziesz nas w samej czołówce. Jeśli masz znajomego, który już odbył u nas kurs, to pewnie wiesz także, że jest z nas zadowolony :) W naszej szkole znajdziesz wszystko, czego potrzebujesz.</p>
-            <h3>U nas możesz poczuć się:</h3>
+            <p>Cześć! Właśnie trafiłeś na stronę najlepszej szkoły nauki jazdy w Brzesku. Co roku w rankingach zdawalności znajdziesz nas w samej czołówce. Jeśli masz znajomego, który już odbył u nas kurs, to mówił Ci, że jest z nas zadowolony :) W naszej szkole znajdziesz wszystko, czego potrzebujesz.</p>
+            <h3>U nas jest:</h3>
             <ul>
-              <li><strong> elastycznie </strong>- terminy zjazdów i wykładów są ustalane wg Twoich potrzeb,</li>
-              <li><strong> swobodnie </strong>- cały kurs prowadzi ten sam instruktor, dzięki czemu możesz czuś się komfortowo i zapomnieć o stresie,</li>
-              <li><strong> dobrze przygotowany </strong>- przedstawiamy materiały szkoleniowe takie same jak na egzaminie a po trasach MORD możesz jeździć bez ograniczeń,</li>
+              <li><strong> elastycznie </strong>- terminy zjazdów i wykładów są ustalane według Twoich potrzeb,</li>
+              <li><strong> swobodnie </strong>- cały kurs prowadzi ten sam instruktor, dzięki czemu możesz czuć się komfortowo i zapomnieć o stresie,</li>
+              <li><strong> profesjonalnie </strong>- przedstawiamy materiały szkoleniowe takie same jak na egzaminie a po trasach MORD możesz jeździć bez ograniczeń,</li>
               <li><strong> wygodnie </strong>- udostępnimy Ci kontakt do lekarza w celu zrobienia badań (w korzystnej cenie), opłatę za kurs możesz rozłożyć na raty 0% a w komplecie zapewniamy zajęcia z ratownikiem medycznym,</li>
-              <li><strong> usatysfakcjonowany </strong>- posiadamy świetne rekomendacje!</li>
+              <li><strong> na najwyższym poziomie </strong>- posiadamy świetne rekomendacje!</li>
             </ul>
           </div>
         </div>
@@ -102,7 +102,7 @@
         <div class="col-lg-6">
           <div class="p-4">
             <h2 class="display-4">Czego uczymy?</h2>
-            <p>Kurs prawa jazdy kat. B to 30 godzin zajęć teoretycznych, podczas których poznasz zasady ruchu i poruszania się po drogach, a także nauczysz się udzielać pierwszej pomocy przedmedycznej. Po zajęciach teoretycznych rozpoczniesz 30 godzin zajęć praktycznych</p>
+            <p>Kurs prawa jazdy kat. B to 30 godzin zajęć teoretycznych, podczas których poznasz zasady ruchu i poruszania się po drogach, a także nauczysz się udzielać pierwszej pomocy przedmedycznej. Po zajęciach teoretycznych rozpoczynasz 30 godzin zajęć praktycznych</p>
             <p>Umożliwimy Ci rozpoczęcie zajęć praktycznych w dowolnym miejscu w Brzesku i okolicach! Podczas szkolenia odbędziesz szkolenie praktyczne na Skodzie Fabii – takiej samej jak na egzaminie państwowym w MORD. Szkolenie zakończysz teoretycznym i praktycznym egzaminem wewnętrznym, po którym otrzymasz zaświadczenie o ukończonym kursie.</p>
             <h3>Pamiętaj!</h3>
             <p>Przed przystąpieniem do szkolenia (zapisaniem się na kurs prawa jazdy), musisz zrobić odpowiednie badanie lekarskie i utworzyć Profil Kandydata na Kierowcę (PKK). Ten dokument, otrzymasz we właściwym Starostwie lub Urzędzie (możesz to zrobić na 3 miesiące wcześniej przed ukończeniem 18. roku życia).</p>
