--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<?php 
+if(isset($_POST['submit'])){
+    $to = "jakubmizinski@gmail.com";
+    $from = "biuro@oskmax.pl";
+    $content = $_POST['content'];
+    $contact = $_POST['contact'];
+    $subject = "Mail z oskmax.pl";
+    $message = "Wiadomość: $content \n\n Kontakt: $contact";
+
+    $headers = "From:" . $from;
+    mail($to,$subject,$message,$headers);
+    echo "Mail Sent. Thank you, we will contact you shortly.";
+    // You can also use header('Location: thank_you.php'); to redirect to another page.
+    }
+?>
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -186,14 +202,14 @@
         </div>
         <div class="col-md-4 part">
           <h4>Napisz do nas e-mail!</h4>
-          <form>
+          <form method="post" action="">
             <div class="form-group">
               <label for="emailContent">Wiadomość</label>
-              <textarea class="form-control" id="emailContent" aria-describedby="emailHelp">Cześć...</textarea>
+              <textarea class="form-control" name="content" id="emailContent" aria-describedby="emailHelp">Cześć...</textarea>
             </div>
             <div class="form-group">
               <label for="emailSender">Jak się z Tobą skontaktować?</label>
-              <input type="text" class="form-control" id="emailSender" aria-describedby="emailHelp" placeholder="numer telefonu lub email">
+              <input type="text" class="form-control" name="contact" id="emailSender" aria-describedby="emailHelp" placeholder="numer telefonu lub email">
               <small id="emailHelp" class="form-text text-muted">Zostaw numer telefonu, albo adres email, na który możemy odpowiedzieć :)</small>
             </div>
             <button type="submit" class="btn btn-primary btn-xl rounded-pill">Wyślij</button>
