--- a/index.html
+++ b/index.html
@@ -1,19 +1,3 @@
-<?php 
-if(isset($_POST['submit'])){
-    $to = "jakubmizinski@gmail.com";
-    $from = "biuro@oskmax.pl";
-    $content = $_POST['content'];
-    $contact = $_POST['contact'];
-    $subject = "Mail z oskmax.pl";
-    $message = "Wiadomość: $content \n\n Kontakt: $contact";
-
-    $headers = "From:" . $from;
-    mail($to,$subject,$message,$headers);
-    echo "Mail Sent. Thank you, we will contact you shortly.";
-    // You can also use header('Location: thank_you.php'); to redirect to another page.
-    }
-?>
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -202,7 +186,7 @@ if(isset($_POST['submit'])){
         </div>
         <div class="col-md-4 part">
           <h4>Napisz do nas e-mail!</h4>
-          <form method="post" action="">
+          <form method="post" action="handler.php">
             <div class="form-group">
               <label for="emailContent">Wiadomość</label>
               <textarea class="form-control" name="content" id="emailContent" aria-describedby="emailHelp">Cześć...</textarea>
