--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
   <!-- Custom styles for this template -->
   <link href="css/styles.css" rel="stylesheet">
   <link rel=icon href=img/favicon.png>
+
+  <script>
+    document.cookie = "first_party_var=value";
+    document.cookie = "SameSite=Lax";
+  </script>
 </head>
 
 <body>
