--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-4">
-            <h2 class="display-4">Kim jesteśmy?</h2>
+            <h2 class="display-4 shadow">Kim jesteśmy?</h2>
             <p>Cześć! Właśnie trafiłeś na stronę najlepszej szkoły nauki jazdy w Brzesku. Co roku w rankingach zdawalności znajdziesz nas w samej czołówce. Jeśli masz znajomego, który już odbył u nas kurs, to mówił Ci, że jest z nas zadowolony :) W naszej szkole znajdziesz wszystko, czego potrzebujesz.</p>
             <h3>U nas jest:</h3>
             <ul>
@@ -106,7 +106,7 @@
         </div>
         <div class="col-lg-6">
           <div class="p-4">
-            <h2 class="display-4">Czego uczymy?</h2>
+            <h2 class="display-4 shadow">Czego uczymy?</h2>
             <p>Kurs prawa jazdy kat. B to 30 godzin zajęć teoretycznych, podczas których poznasz zasady ruchu i poruszania się po drogach, a także nauczysz się udzielać pierwszej pomocy przedmedycznej. Po zajęciach teoretycznych rozpoczynasz 30 godzin zajęć praktycznych</p>
             <p>Umożliwimy Ci rozpoczęcie zajęć praktycznych w dowolnym miejscu w Brzesku i okolicach! Podczas szkolenia odbędziesz szkolenie praktyczne na Skodzie Fabii – takiej samej jak na egzaminie państwowym w MORD. Szkolenie zakończysz teoretycznym i praktycznym egzaminem wewnętrznym, po którym otrzymasz zaświadczenie o ukończonym kursie.</p>
             <h3>Pamiętaj!</h3>
@@ -127,7 +127,7 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-4">
-            <h2 class="display-4">Kiedy startujemy?</h2>
+            <h2 class="display-4 shadow">Kiedy startujemy?</h2>
             <p>Rozpoczynamy w pierwszą środę każdego miesiąca o godz. 15:00 w Brzesku na ul. Ogrodowej 5 (budynek Spółdzielni Mieszkaniowej).</p>
             <p>Na kurs możesz się zapisać w biurze od poniedziałku do środy w godzinach 15-16, lub telefonicznie pod numerem <b>505 069 921</b>.</p>
           </div>
@@ -140,7 +140,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="p-3">
-          <h2 class="display-4">Co o nas mówią?</h2>
+          <h2 class="display-4 shadow">Co o nas mówią?</h2>
         </div>
       </div>
       <div class="recommendation-container row justify-content-center">
