Update Facebook reviews

--- a/index.html
+++ b/index.html
@@ -143,26 +143,17 @@
           <h2 class="display-4 text-shadow">Co o nas mówią?</h2>
         </div>
       </div>
-      <div class="recommendation-container row justify-content-center">
-        <iframe class="recommendation r-1" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpermalink.php%3Fstory_fbid%3D1077675972619604%26id%3D100011316349026&show_text=true&width=auto&appId" width="552" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-      </div>
-      <div class="recommendation-container row justify-content-center">
-        <iframe class="recommendation r-2" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fkinga.jaworska.52%2Fposts%2F2492004664261977&show_text=true&width=auto&appId" width="552" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-      </div>
-      <div class="recommendation-container row justify-content-center">
-        <iframe class="recommendation r-3" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fanita.tekiela.1%2Fposts%2F792401687592379%3A0&show_text=true&width=auto&appId" width="552" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-      </div>
-      <div class="recommendation-container row justify-content-center">
-        <iframe class="recommendation r-4" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fagnieszka.marek.777158%2Fposts%2F155708662379557&show_text=true&width=auto&appId" width="552" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-      </div>
-      <div class="recommendation-container row justify-content-center">
-        <iframe class="recommendation r-5" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmarta.urbanska.52%2Fposts%2F1253016774797642%3A0&show_text=true&width=auto&appId" width="552" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-      </div>
-      <div class="recommendation-container row justify-content-center">
-        <iframe class="recommendation r-6" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Frozalia.klesiewicz%2Fposts%2F2353335184777322&show_text=true&width=auto&appId" width="552" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-      </div>
-      <div class="recommendation-container row justify-content-center">
-        <iframe class="recommendation r-7" src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FNaukaJazdyMax%2Fposts%2F2780938755296362&show_text=true&width=auto&appId" width="552" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+      <div class="row">
+        <a href="https://www.facebook.com/permalink.php?story_fbid=1158826074464855&id=100010124198185" target="_blank" class="review col-lg-6"><img class="" src="img/reviews/anna_kalwara.jpg" alt=""></a>
+        <a href="https://www.facebook.com/permalink.php?story_fbid=1077675972619604&id=100011316349026" target="_blank" class="review col-lg-6"><img class="" src="img/reviews/sabina_wilkosz.jpg" alt=""></a>
+        <a href="https://www.facebook.com/kinga.jaworska.52/posts/2492004664261977" target="_blank" class="review col-lg-6"><img class="" src="img/reviews/kinga_jaworska.jpg" alt=""></a>
+        <a href="https://www.facebook.com/agnieszka.marek.777158/posts/155708662379557" target="_blank" class="review col-lg-6"><img class="" src="img/reviews/agnieszka_marek.jpg" alt=""></a>
+        <a href="https://www.facebook.com/rozalia.klesiewicz/posts/2353335184777322" target="_blank" class="review col-lg-6"><img class="" src="img/reviews/rozalia_dudziak.jpg" alt=""></a>
+        <a href="https://www.facebook.com/permalink.php?story_fbid=500229677233785&id=100017402705282" target="_blank" class="review col-lg-6"><img class="" src="img/reviews/malgorzata_zaucha.jpg" alt=""></a>
+        <a href="https://www.facebook.com/tomasz.kapa.3/posts/1186268624898081" target="_blank" class="review col-lg-6"><img class="" src="img/reviews/tomasz_kapa.jpg" alt=""></a>
+        <a href="https://www.facebook.com/permalink.php?story_fbid=2236385933138981&id=100003027876906" target="_blank" class="review col-lg-6"><img class="" src="img/reviews/angelika_bialek.jpg" alt=""></a>
+        <a href="https://www.facebook.com/ArturHajdo099/posts/2443182275903149" target="_blank" class="review col-lg-6"><img class="" src="img/reviews/artur_hajdo.jpg" alt=""></a>
+        <a href="https://www.facebook.com/beata.wojtal/posts/2865979590293371" target="_blank" class="review col-lg-6"><img class="" src="img/reviews/beata_wojtal.jpg" alt=""></a>
       </div>
     </div>
   </section>
