--- a/index.html
+++ b/index.html
@@ -158,6 +158,40 @@
     </div>
   </section>
 
+  <section id="statystyki">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="p-3">
+          <h2 class="display-4 text-shadow">Jakie mamy statystyki?</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div id="carouselStatystyki" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselStatystyki" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselStatystyki" data-slide-to="1"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/statystyki/1.png" class="d-block w-100" alt="statystyki">
+            </div>
+            <div class="carousel-item">
+              <img src="img/statystyki/2.png" class="d-block w-100" alt="statystyki">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselStatystyki" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselStatystyki" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="footer-content container">
