--- a/index.html
+++ b/index.html
@@ -200,10 +200,11 @@
           <h3>Ośrodek Szkolenia Kierowców MAX</h3>
           <p><b>Piotr Kubala</b></p>
           <ul>
-            <li><img class="icon" src="img/phone.svg" alt=""> 505 069 921</li>
-            <li><img class="icon" src="img/envelope-closed.svg" alt=""> piotr_kubala@autograf.pl</li>
-            <li><img class="icon" src="img/map-marker.svg" alt=""> Brzesko, ul. Ogrodowa 5</li>
-            <li><a class="nav-link footer-link" href="https://www.facebook.com/NaukaJazdyMax/" target="_blank">Facebook</a></li>
+            <li><img class="icon" src="img/phone.svg" alt="phone number"> 505 069 921</li>
+            <li><img class="icon" src="img/envelope-closed.svg" alt="email"> piotr_kubala@autograf.pl</li>
+            <li><img class="icon" src="img/map-marker.svg" alt="address"> Brzesko, ul. Ogrodowa 5</li>
+            <li><img class="icon" src="img/f.svg" alt="facebook"><a class="nav-link footer-link" href="https://www.facebook.com/NaukaJazdyMax/" target="_blank">Facebook</a></li>
+            <li><img class="icon" src="img/download.svg" alt="download"><a class="nav-link footer-link" href="standardy_ochrony_maloletnich.pdf" target="_blank" rel="noopener noreferrer">Standardy Ochrony Małoletnich</a></li>
           </ul>
         </div>
         <div class="col-md-4 part">
